--- a/src/app/components/dashboard/component.html
+++ b/src/app/components/dashboard/component.html
@@ -3,7 +3,7 @@
 </header>
 <section>
   <form [formGroup]="form" (ngSubmit)="submitState()" autocomplete="off">
-    <md-input formControlName="name" [placeholder]="nameLabel"></md-input><br>
+    <!-- <md-input formControlName="name" [placeholder]="nameLabel"></md-input><br> -->
     <button md-raised-button color="primary">Update store</button>
     <button md-raised-button color="accent" type="button" (click)="clearName()">Clear name</button>
   </form>
