adding store-devtools

--- a/src/app/components/store-devtools/component.html
+++ b/src/app/components/store-devtools/component.html
@@ -1,5 +1,1 @@
-<ngrx-store-log-monitor #storeMonitor
-  toggleCommand="ctrl-k" 
-  positionCommand="ctrl-m" 
-  [expandEntries]="true">
-</ngrx-store-log-monitor>
+<ngrx-store-log-monitor toggleCommand="ctrl-h" positionCommand="ctrl-m"></ngrx-store-log-monitor>
