--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,5 +19,5 @@
   <router-outlet (activate)="activateEvent($event)" (deactivate)="deactivateEvent($event)"></router-outlet>
 </md-card>
 </md-sidenav-layout>
-<!-- <my-store-devtools *ngIf="showMonitor"></my-store-devtools> -->
+<my-store-devtools *ngIf="showMonitor"></my-store-devtools>
 <my-login></my-login>
